Adjusted titles in topbar

--- a/app/views/shared/_personal_bar.html.erb
+++ b/app/views/shared/_personal_bar.html.erb
@@ -8,10 +8,10 @@
                     end
 
                     links = [
-                        { text: "Siste nytt",     path: users_path },
-                        { text: "Dine annonser",     path: users_ads_path },
-                        { text: "Din profil",        path: edit_users_path },
-                        { text: "Dine forespørsler", path: bookings_path },
+                        { text: "Siste nytt",        path: users_path },
+                        { text: "Annonser",          path: users_ads_path },
+                        { text: "Profil",            path: edit_users_path },
+                        { text: "Forespørsler",      path: bookings_path },
                         { text: "Leiehistorikk",     path: "#" },
                         { text: "Favoritter",        path: users_favorite_ads_path },
                     ]
