--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,4 @@
-<%= render partial: "shared/personal_bar", locals: { selected: "Din profil" } %>
+<%= render partial: "shared/personal_bar", locals: { selected: "Profil" } %>
 
 <div class="container">
     <div class="row">
