--- a/app/views/users/requests.html.erb
+++ b/app/views/users/requests.html.erb
@@ -1,4 +1,4 @@
-<%= render partial: "personal_bar", locals: { selected: "Dine forespørsler" } %>
+<%= render partial: "personal_bar", locals: { selected: "Forespørsler" } %>
 
 <div class="container">
     <div class="row">
