--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,9 +1,9 @@
-<%= render partial: "shared/personal_bar", locals: { selected: "Dine forespørsler" } %>
+<%= render partial: "shared/personal_bar", locals: { selected: "Forespørsler" } %>
 
 <div class="container">
     <div class="row">
         <div class="nine columns">
-            <%= render layout: "gray_box", locals: {title: "Nye forespørsler"} do %>
+            <%= render layout: "gray_box", locals: {title: "Forespørsler"} do %>
                 Under ser du nye forespørsler. Om du ser etter din historikk
                 finner du denne ved å <a href="#">klikke her.</a>
             <% end %>
