--- a/app/views/shared/_booking_period_selector.html.erb
+++ b/app/views/shared/_booking_period_selector.html.erb
@@ -1,5 +1,5 @@
 <div class="booking-period-selector" data-controller="kalendaeBookingSelector">
-    <div data-kalendae-container></div>
+    <div data-kalendae-container class="u-center"></div>
     <div>
         Jeg vil leie fra:
         <%= form.date_field :starts_at_date, data: { format: "yyyy.MM.dd" } %>
