--- a/app/assets/stylesheets/_search_filter_section.scss
+++ b/app/assets/stylesheets/_search_filter_section.scss
@@ -1,11 +1,19 @@
 @import 'constants.scss';
 
 .search-filter-section {
-    padding-top: $standard-spacing;
-    padding-bottom: $standard-spacing;
+    padding-top: $standard-spacing / 2;
+    padding-bottom: $standard-spacing / 2;
 
     &__form {
         margin-bottom: 0;
+    }
+
+    &__summary {
+        text-align: center;
+    }
+
+    &__expando {
+        margin: 0;
     }
 
     &__row {
