--- a/app/assets/stylesheets/_search.scss
+++ b/app/assets/stylesheets/_search.scss
@@ -106,6 +106,10 @@ $breakpoint: 550px;
         }
     }
 
+    &__hits-list {
+        padding-left: $standard-spacing;
+    }
+
     @media screen and (min-width: 768px) {
         @include search-split-pane(58%);
     }
