Unclosed tag, removed explainer from about page

--- a/app/views/misc/about.html.erb
+++ b/app/views/misc/about.html.erb
@@ -1,7 +1,5 @@
 <h1>Om plendit</h1>
 
-<iframe width="560" height="315" src="<%= Rails.configuration.x.frontpage.explainer_video_url %>" frameborder="0" allowfullscreen></iframe>
-
 <p class="u-push-down">
     Folk flest eier en god del ting man ikke bruker så ofte. Ta. f.eks biler,
     båter eller tilhengere. Eller hva med den kajakken eller kanoen som du
@@ -13,7 +11,7 @@
 </p>
 
 <p>
-    Vi har laget <strong>«plendit»<strong> for akuratt dette. plendit er en
+    Vi har laget <strong>«plendit»</strong> for akuratt dette. plendit er en
     forkortelse for <strong>«people lend it».</strong> Eller «folk låner det»
     om du vil. plendit er et sted der du enkelt kan låne til og fra
     privatpersoner og forretninger i nærheten av deg.
@@ -36,4 +34,3 @@
     altfor sjelden bruker selv. Lei det du trenger og spar penger!
     Ja: <strong>just plendit!</strong>
 </p>
-
