Added some partner logos to temporary about page

--- a/app/views/misc/about.html.erb
+++ b/app/views/misc/about.html.erb
@@ -34,3 +34,12 @@
     altfor sjelden bruker selv. Lei det du trenger og spar penger!
     Ja: <strong>just plendit!</strong>
 </p>
+
+<h2>Partnere</h2>
+
+<%= link_to (image_tag "logos/finn_logo.png", class: 'partner-logo'), 'https://m.finn.no' %>
+<br>
+<%= link_to (image_tag "logos/innovasjon-norge.png", class: 'partner-logo'), 'http://www.innovasjonnorge.no/' %>
+<br>
+<%= link_to (image_tag "logos/mangopay_powered_590x53.png", class: 'partner-logo'), 'https://www.mangopay.com/' %>
+<br>
