--- a/app/assets/stylesheets/frontpage.scss
+++ b/app/assets/stylesheets/frontpage.scss
@@ -11,16 +11,19 @@ $break-tiny: 640px;
     background-position: center;
     background-size: cover;
 
-
     &__splash {
         position: absolute;
         top: 0;
         width: 100%;
         text-align: center;
-        padding-top: 80px;
+        padding-top: 40px;
 
         @media screen and (max-width: $break-small) {
-            padding-top: 44px;
+            padding-top: 28px;
+        }
+
+        @media screen and (min-width: $break-large) {
+            padding-top: 80px;
         }
     }
 
