Adjusted IF branding a bit

--- a/app/assets/stylesheets/_front_search_block.scss
+++ b/app/assets/stylesheets/_front_search_block.scss
@@ -2,7 +2,7 @@
 
 .front-popular-box {
     text-align: center;
-    margin-top: $standard-spacing * 3;
+    margin-top: $standard-spacing;
     margin-bottom: $standard-spacing * 4;
 
     &__row1,
