--- a/app/views/misc/frontpage.html.erb
+++ b/app/views/misc/frontpage.html.erb
@@ -41,14 +41,14 @@
 <div class="container u-push-down-only">
     <div class="if-branding-section">
         <div class="if-branding-section__centerer">
-            <%= image_tag "logos/if_150x148.png", size: "70x69", alt: "", class: "u-pull-left if-branding-section__logo" %>
+            <%= image_tag "logos/if_150x148.png", size: "60x59", alt: "", class: "u-pull-left if-branding-section__logo" %>
             <h2>Skadeforsikring fra IF</h2>
             <p>
                 Slipp alle bekymringer. Hos plendit kan du velge å forsikre tingene
                 du leier ut. Ved skade har du som utleier ingen egenandel eller bonustap.
-            </p>
-            <p>
-                <%= link_to 'Les mer om forsikring', Rails.configuration.x.customerservice.insurance_info %>.
+                <strong>
+                    <%= link_to 'Les mer om forsikring', Rails.configuration.x.customerservice.insurance_info %>.
+                </strong>
             </p>
         </div>
     </div>
