--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -121,8 +121,9 @@
 </div>
 
 <div>
-    <% if @ad.valid? %>
-        <%= button_to 'Send til publisering', submit_for_review_ad_path(@ad), form_class: "ad-status-box__form u-inline", class: "button button-primary" %>
+    <% if @ad.published? %>
+        <%= button_tag "lagre", class: "button", form_class: "u-inline", data: {controller: "submitMainForm"}  %>
+    <% elsif @ad.valid? %>
         <%= button_tag "lagre", class: "button", form_class: "u-inline", data: {controller: "submitMainForm"}  %>
     <% else %>
         <%= button_tag "lagre", class: "button button-primary", form_class: "u-inline", data: {controller: "submitMainForm"}  %>
