--- a/app/assets/stylesheets/bookings.scss
+++ b/app/assets/stylesheets/bookings.scss
@@ -1,3 +1,18 @@
 // Place all the styles related to the Bookings controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+
+.booking-request-summary {
+    list-style: none;
+
+    &__input {
+        font-size: 12px;
+        max-width: 100px;
+    }
+
+    li {
+        overflow: auto;
+    }
+}
