--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,15 +1,10 @@
 <div class="container">
     <div class="row">
         <%= render partial: "shared/hero_image", locals: { ad: @ad } %>
-
         <div class="twelve columns">
             <%= render partial: "shared/ad_title_box", locals: { ad: @ad } %>
-
-            <h2>Leieforespørsel til <%= @ad.user.safe_display_name %><%#= @ad.user.decorate.display_name %></h2>
-            FIXME: Velg dato og tidspunkt at du ønsker å hente "item":
-
+            <h2>Leieforespørsel til <%= @ad.user.display_name %></h2>
             <%= render 'form' %>
-
         </div>
     </div>
 </div>
