--- a/app/views/shared/_booking_period_selector.html.erb
+++ b/app/views/shared/_booking_period_selector.html.erb
@@ -1,15 +1,5 @@
 <div class="booking-period-selector" data-controller="kalendaeBookingSelector">
     <div data-kalendae-container class="u-center"></div>
-    <div>
-        Jeg vil leie fra:
-        <%= form.date_field :starts_at_date, data: { format: "yyyy.MM.dd" } %>
-        Hentes klokken:
-        <%= form.time_field :starts_at_time %>
-
-        <br>
-        Jeg vil leie til:
-        <%= form.date_field :ends_at_date, data: { format: "yyyy.MM.dd" } %>
-        Leveres klokken:
-        <%= form.time_field :ends_at_time %>
-    </div>
+    <%= form.hidden_field :ends_at_date, data: { format: "yyyy.MM.dd" } %>
+    <%= form.hidden_field :starts_at_date, data: { format: "yyyy.MM.dd" } %>
 </div>
