--- a/app/views/users/_provider_logins.html.erb
+++ b/app/views/users/_provider_logins.html.erb
@@ -1,3 +1,13 @@
+
+<span class="social-button social-button--fb">
+    <%= image_tag 'logos/fb-45x45.png', size: '45x45', alt: '', class: 'social-button__logo' %>
+    <span class="social-button__text">
+        Logg inn med Facebook
+    </span>
+</span>
+
+<hr class="u-push-down">
+
 <div class="row">
 
     <div class="four columns">
