update privacy policy

--- a/app/views/misc/privacy.html.erb
+++ b/app/views/misc/privacy.html.erb
@@ -1,4 +1,86 @@
-<h1>Om plendit</h1>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, dolorem excepturi expedita inventore laboriosam magnam minima molestiae nemo quidem recusandae similique sunt voluptatem. Ab aliquid eius, ex maxime quam repellat!</p>
+<h1>Personvernerklæring</h1>
 
-<iframe width="560" height="315" src="<%= Rails.configuration.x.frontpage.explainer_video_url %>" frameborder="0" allowfullscreen></iframe>
+<h2>
+1.      Om personvernerklæringen
+</h2>
+
+<p>
+Våre brukeres tillit er av største viktighet for oss, og plendit tar derfor ansvar for å beskytte ditt personvern.  Denne personvernerklæringen forklarer hvordan vi samler inn og benytter informasjon om våre brukere, og hvordan vi beskytter brukernes personvern. Om du har noen spørsmål om vår personvernerklæring eller håndteringen av personopplysninger må du gjerne kontakte oss på  e-post kundeservice@plendit.no.
+</p>
+
+<h2>
+2.       Kort oversikt over behandlingen av personopplysninger
+</h2>
+
+<p>
+Vi respekterer din rett til personvern, og all behandling av personopplysninger skjer i henhold til norsk personvernlovgivning. For enkelhets skyld, har vi laget følgende oppsummering av vår behandling av personopplysninger, men vi anbefaler at du setter deg inn i denne personvernerklæringen i sin helhet for at du skal forstå hvordan vi samler inn og bruker personopplysninger.
+</p>
+
+<p>
+Hvis du har registrert en brukerkonto på plendit, vil plendit AS kunne behandle personopplysninger om deg for å levere plendits tjenester til deg og til å forbedre og videreutvikle våre tjenester. Vi behandler også personopplysninger for å kunne gi deg tilbud, anbefalinger og innhold tilpasset ditt bruksmønster, til analyse for å forstå markedstrendene og for å begrense misbruk av tjenestene.
+</p>
+
+<p>
+Opplysningene som samles inn for disse formålene inkluderer både opplysninger du selv oppgir (navn, e-postadresse, ID-kort, osv.) og informasjon som samles inn gjennom bruk av tjenestene, herunder informasjon om posisjon, bruksmønster og teknisk informasjon om din enhet og internett-tilkobling.
+</p>
+
+<h2>
+3.      Grunnleggende om behandlingen av personopplysninger
+</h2>
+
+<p>
+Personopplysninger er opplysninger og vurderinger som kan knyttes til en identifiserbar enkeltperson. Som eksempel kan nevnes navn, adresse, telefonnummer og e-postadresse.
+</p>
+
+<p>
+Behandling av personopplysninger er enhver bruk av personopplysninger, som for eksempel innsamling, registrering, sammenstilling, lagring og utlevering eller en kombinasjon av slike bruksmåter. All behandling av personopplysninger er underlagt personopplysningsloven, og Datatilsynet fører tilsyn med loven og medvirker til at personvernet til hver enkelt ikke blir krenket gjennom bruken av personopplysninger.
+</p>
+
+<p>
+Behandlingsansvarlig er betegnelsen på den som primært har ansvar og plikter etter personopplysningsloven. Plendit AS er behandlingsansvarlig for personopplysinger som behandles i forbindelse med bruk av våre tjenester.
+</p>
+
+<h3>Informasjon om posisjon</h3>
+
+<p>
+Vi kan få tilgang til din geografiske possisjonsdata ved hjelp av ip-adresse og/eller andre skilder. Vi ber alltid om samtykke for å bruke din posisjon i tjenesten. Informasjonen brukes eksempelvis til å vise deg annonser som er relevant for der du befinner deg og til å utarbeide statistikk.
+</p>
+
+<h2>
+4.      Hva brukes opplysningene til?
+</h2>
+
+<p>
+Plendit behandler personopplysninger om deg for å gjennomføre avtalen med deg, til å forbedre og videreutvikle tilknyttede tjenester, herunder å tilpasse tjenestene etter brukernes antatte ønsker. Vi behandler også personopplysninger for å kunne gi deg tilbud og anbefalinger tilpasset ditt bruksmønster, til analyse for å forstå markedstrendene samt for å forsøke å forutsi fremtidig atferd.
+</p>
+
+<h3>Begrense misbruk av tjenestene</h3>
+
+<p>
+Vi benytter informasjon knyttet til brukernes aktiviteter og teknisk data for å begrense ulike former for misbruk av våre tjenester. Misbruk inkluderer blant annet svindelforsøk, «spamming», hets- og sjikane, forsøk på å logge på andres brukerkontoer samt handlinger som er forbudt etter norsk lov.
+</p>
+
+<h2>
+5.      Deling av informasjon
+</h2>
+
+<p>
+Opplysninger om din bruk av plendit og personopplysninger kan bli utlevert til våre samarbeidspartnere og leverandører. Som for eksempel forsikringsselskap og betalingsleverandør.
+</p>
+
+<p>
+Dersom det er mistanke om at det er begått lovbrudd i forbindelse med bruk av plendit vil informasjonen kunne utleveres til offentlige myndigheter på begjæring. Vi vil også kunne levere ut informasjon til andre dersom det er nødvendig for å forhindre ytterligere svindel, eller informasjonen er nødvendig for å avklare konkrete tvister om annonseobjektet, jf. personopplysningsloven § 8 bokstav f.
+</p>
+
+<p>
+Plendit AS vil ikke dele, selge, formidle eller på annen måte utlevere personopplysninger om deg på annen måte enn det som fremgår av denne personvernerklæringen med mindre vi er pålagt dette som følge av en bindende rettsavgjørelse eller vi har innhentet ditt samtykke. Dette er imidlertid ikke til hinder for at vi kan benytte en databehandler som behandler personopplysningene på våre vegne i henhold til avtale som beskrevet i personopplysningsloven § 15. Databehandlere som får tilgang til din personinformasjon i forbindelse med levering av tjenester til plendit  (eksempelvis når vi bruker en tredjepart til å gjennomføre betalingstransaksjoner eller lagre informasjon på en webserver) er underlagt taushetsplikt, og de har ikke lov å bruke denne informasjonen på noen annen måte enn i utførelsen av tjenester for oss.
+</p>
+
+<h2>
+6.      Sletting av personopplysninger
+</h2>
+
+<p>
+Personopplysninger vil ikke bli lagret lenger enn det som er nødvendig for å oppfylle formålet med behandlingen.  I tillegg vil du som bruker når som helst kunne be oss om å slette opplysninger knyttet til deg som bruker, med mindre opplysningene er nødvendige for å levere en tjeneste som du fremdeles ønsker å ha tilgang til (eksempelvis et abonnement) eller det er lovpålagt å oppbevare opplysningene en viss tid (eksempelvis visse opplysninger knyttet til kjøp av tjenester i henhold til regnskapslovgivningen). Informasjon i annonser som er publisert for allmennheten på plendit vil uansett lagres i minst fem år for bidra til å avklare tvister om annonseobjektet, eksempelvis om partene er uenige om hva som stod i annonsen om garanti, kilometerstand osv.
+</p>
+
