update privacy policy

--- a/app/views/misc/privacy.html.erb
+++ b/app/views/misc/privacy.html.erb
@@ -5,7 +5,7 @@
 </h2>
 
 <p>
-Våre brukeres tillit er av største viktighet for oss, og plendit tar derfor ansvar for å beskytte ditt personvern.  Denne personvernerklæringen forklarer hvordan vi samler inn og benytter informasjon om våre brukere, og hvordan vi beskytter brukernes personvern. Om du har noen spørsmål om vår personvernerklæring eller håndteringen av personopplysninger må du gjerne kontakte oss på  e-post kundeservice@plendit.no.
+Våre brukeres tillit er av største viktighet for oss, og plendit tar derfor ansvar for å beskytte ditt personvern.  Denne personvernerklæringen forklarer hvordan vi samler inn og benytter informasjon om våre brukere, og hvordan vi beskytter brukernes personvern. Om du har noen spørsmål om vår personvernerklæring eller håndteringen av personopplysninger må du gjerne kontakte oss på <%= Plendit::Application.config.x.customerservice.email %>.
 </p>
 
 <h2>
