cleanup: remove route that was only used in one place. fixed links to bookings, so that it would still worked

--- a/app/views/ads/_ad_booking_box.html.erb
+++ b/app/views/ads/_ad_booking_box.html.erb
@@ -10,7 +10,8 @@
 
     <div class="ad-booking-box__button-holder">
         <% if ad.published? && !current_user_is_owner(ad) %>
-            <%= form_tag new_ad_booking_path( @ad ), method: :get do %>
+            <%= form_tag new_booking_path, method: :get do %>
+                <%= hidden_field_tag :ad_id, @ad.id %>
                 <%= button_tag("Gå til booking", {class: "u-push-down button button-primary availability-section__book"}) %>
             <% end %>
         <% end %>
