--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -20,7 +20,7 @@
             </p>
 
             <% if resource.errors.empty? %>
-                <details class="u-implode-summary">
+                <details class="u-implode-summary u-push-down">
                     <summary><h2 class="u-link-like">Lag en konto</h2></summary>
             <% end %>
                 <div>
