--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -129,9 +129,18 @@ $blueish: rgb(213, 235, 255);
         background-color: #3b5998;
     }
 
+    &--spid {
+        background-color: rgb(0, 80, 145);
+    }
+
+    &--google {
+        background-color: rgb(218, 79, 70);
+
+    }
+
     &__logo {
         box-sizing: content-box;
-        padding-bottom: 4px;
+        padding-bottom: 6px;
         vertical-align: middle;
     }
 
@@ -139,8 +148,6 @@ $blueish: rgb(213, 235, 255);
         display: inline-block;
         border-left: solid thin rgba(0,0,0,0.2);;
         padding-left: 24px;
+        height: $height - 2;
     }
-
 }
-
-
