Added different bg color for broadcast than for regular flash bar

--- a/app/assets/stylesheets/_flash_bar.scss
+++ b/app/assets/stylesheets/_flash_bar.scss
@@ -6,7 +6,8 @@
     color: black;
     font-weight: bold;
     text-align: center;
+
+    &--broadcast {
+        background-color: papayawhip;
+    }
 }
-
-
-
