Adjusted broadcast bg

--- a/app/assets/stylesheets/_constants.scss
+++ b/app/assets/stylesheets/_constants.scss
@@ -12,14 +12,16 @@ $color-gray-background: #d4d4d4; // rgb(212,212,212);
 $color-subtle-gray-background: #e5e7e5;
 $color-skeleton-input-border: #d1d1d1;
 
+$color-broadcast-background: #ffc42a;
+
 $color-button-delete: #be0027;
 $color-button-good: #36b984;
 $color-button-bad: #c20400;
 $color-button-neutral: #8f8989;
 
 $color-state-green: #135453;
-$color-state-red: #BA1F29;
-$color-state-yellow: #DB7917;
+$color-state-red: #ba1f29;
+$color-state-yellow: #db7917;
 
 $subtle-shadow: 0 1px 5px rgba(black, 0.1);
 
