--- a/app/assets/stylesheets/_flash_bar.scss
+++ b/app/assets/stylesheets/_flash_bar.scss
@@ -8,6 +8,6 @@
     text-align: center;
 
     &--broadcast {
-        background-color: papayawhip;
+        background-color: $color-broadcast-background;
     }
 }
