--- a/app/assets/stylesheets/_constants.scss
+++ b/app/assets/stylesheets/_constants.scss
@@ -12,7 +12,7 @@ $color-gray-background: #d4d4d4; // rgb(212,212,212);
 $color-subtle-gray-background: #e5e7e5;
 $color-skeleton-input-border: #d1d1d1;
 
-$color-broadcast-background: #ffc42a;
+$color-broadcast-background: #d1f7de;
 
 $color-button-delete: #be0027;
 $color-button-good: #36b984;
